syntax = "proto3";

package calculator;

option go_package = "grpc-go-course/calculator/proto;service";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeRequest {
    int32 number = 1;
}

message PrimeResponse {
    int32 number = 1;
}

message AvgRequest {
    int64 number = 1;
}

message AvgResponse {
    float result = 1;
}

message MaxRequest {
    int64 number = 1;
}

message MaxResponse {
    int64 result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse);
    rpc PrimeNumber(PrimeRequest) returns (stream PrimeResponse);
    rpc Avg(stream AvgRequest) returns (AvgResponse);
    rpc Max(stream MaxRequest) returns (stream MaxResponse);
}